[package]
name = "cat"
version = "0.1.0"
authors = ["TheDoctorsLife <hoffmeyer25@gmail.com>"]
description = "A library to do various cat related things, such as facts about cats and more."
repository = "https://github.com/TheDoctorsLife/cats-rs/"
readme = "README.md"
keywords = ["cat", "cats", "catfact", "catfacts", "cat-fact", "cat-facts", "catimage", "catimages", "cat-image", "cat-images"]
license = "AGPL-3.0"


[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper = "0.9"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"

[dependencies.url]
feature = ["serde"]
version = "1.2"
